# FruitcraftClient-py

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pypi_release.yml
fruitcraft/: __init__.py  client.py
fruitcraft/f_types/: __init__.py  cards.py  errors.py  utils.py
tests/: test_client.py
